<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/category_image"
        android:layout_width="@dimen/icon_height"
        android:layout_height="@dimen/icon_height"
        android:layout_marginLeft="@dimen/icon_margin"
        android:layout_marginTop="@dimen/icon_margin"
        android:contentDescription="@string/icon_image_description"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/category_image"
        android:orientation="vertical"
        android:paddingLeft="@dimen/relative_layout_padding_leftt">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textView_height"
            android:gravity="bottom"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/tool_text_name" />

        <TextView
            android:id="@+id/address_text_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textView_height"
            android:layout_below="@id/name_text_view"
            android:gravity="top"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            tools:text="@string/tool_text_address" />

        <TextView
            android:id="@+id/date_phone_text_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textView_height"
            android:layout_below="@id/address_text_view"
            android:gravity="top"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            tools:text="@string/tool_text_date_or_phone" />

        <TextView
            android:id="@+id/time_text_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textView_height"
            android:layout_below="@id/address_text_view"
            android:gravity="bottom"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            tools:text="@string/tool_text_time" />

    </RelativeLayout>

</RelativeLayout>
